--- a/morpion.html
+++ b/morpion.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'accueil</title>
+    <title>Morpion</title>
+    <script src="morpion.js"></script>
 </head>
 <body>
-    <a href="./morpion"><h1>Jeu du morpion</h1></a>
+    <canvas id="board"></canvas>
 </body>
 </html>
